name:                sketch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/krisajenkins/sketch#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2017 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , directory
                     , hmatrix-gsl
                     , text
                     , megaparsec
                     , Chart
                     , Chart-diagrams
                     , scientific
                     , transformers
                     , pipes
                     , bytestring
                     , file-embed
                     , mtl
  default-language:    Haskell2010

executable sketch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sketch
  default-language:    Haskell2010

test-suite sketch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sketch
                     , HUnit
                     , hmatrix
                     , QuickCheck
                     , hspec
                     , hspec-core
                     , quickcheck-instances
  other-modules:
      LibSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/sketch
